@@ -3,6 +3,7 @@
 
 	* general: removed all Makefiles and configure script generated by
 	  autoconf and automake from version control - use build_aux/bootstrap
+	* Makefile.am: ensure correct time stamps for make dist
 
 2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
